# fr3_mpc

./: .gitignore  pyproject.toml
fr3_mpc/: __init__.py  asynchronous.py  jacobian.py  reach_joints.py  reach_pose.py
models/: panda_mjx.xml
models/franka_emika_panda/: mjx_panda.xml
models/franka_fr3/: fr3.xml
models/franka_fr3_v2/: fr3v2.xml
scripts/: calibrate.py  simulator.py  torques.py
src/: reach_joints.py  sim.py
